Fixed styling of focused Edit button on details pane in Clippings Manager

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -174,6 +174,11 @@ button[disabled] {
     opacity: 0.4;
 }
 
+/* Used only for the Edit button on the web address bar. */
+button.browser-style:focus:not(:disabled) {
+    border-color: var(--color-bkgd) !important;
+}
+
 input[type="text"],
 input[type="search"] {
     height: 24px;
